# eigen_contraction_autodiff_issue_2714

./: (workaround)TensorContraction.h  .gitignore  README.md  example_1.cpp  example_1_threadpool.cpp  example_2.cpp
cuda_test/: CMakeLists.txt
cuda_test/include/: functions.hpp
cuda_test/src/: functions.cu  main.cc
